# libgit2

./: .gitignore  Cargo.toml  Jenkinsfile  README.md
shared-library-builder/builder/: Cargo.toml
shared-library-builder/builder/src/: main.rs
