[workspace]
resolver = "2"

members = [
    "shared-library-builder/library",
    "shared-library-builder/builder",
]

exclude = [ "target" ]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

[profile.release]
opt-level = 3

[workspace.dependencies]
shared-library-builder = { git = "https://github.com/feenkcom/shared-library-builder-rs" }

#[patch."https://github.com/feenkcom/shared-library-builder-rs"]
#shared-library-builder = { path = "../shared-library-builder-rs" }